# lalagolf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  load_data.py  readdata.py  requirements.txt  run_webapp.py  shrimp-rules.md
v2/api/: Dockerfile  alembic.ini  pyproject.toml
v2/api/alembic/: env.py
v2/api/alembic/versions/: 20260502_0001_initial_auth_schema.py  20260502_0002_initial_round_schema.py  20260503_0003_analysis_schema.py  20260503_0004_session_ip_text.py  20260503_0005_share_links.py  20260503_0006_chat_schema.py  20260503_0007_migration_schema.py  20260506_0008_practice_goals.py  20260509_0009_analysis_jobs.py  20260509_0010_round_draft_and_club_bag.py  20260510_0011_social_visibility.py  20260510_0012_social_feed.py  20260510_0013_companion_account_links.py
v2/api/app/: __init__.py  main.py
v2/api/app/api/: deps.py
v2/api/app/core/: config.py  logging.py  security.py
v2/api/app/db/: health.py  ownership.py
v2/api/app/models/: __init__.py  analytics.py  chat.py  constants.py  migration.py  mixins.py  practice.py  round.py  share.py  social.py  upload.py  user.py
v2/api/app/schemas/: auth.py  chat.py  practice.py  round.py  (+3 more)
v2/api/tests/: conftest.py  test_analysis_jobs_fallback.py  test_analytics_api.py  test_analytics_service.py  test_api_error_states.py  test_auth.py  test_chat_api.py  test_db.py  test_early_import.py  test_health.py  test_migration_service.py  test_operations.py  test_practice_api.py  test_round_foundation.py  test_rounds_api.py  test_security_hardening.py  test_shares_api.py  test_social_api.py  test_uploads_api.py
(+286 files in other folders)
